some more backend stuff again

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
+spring.data.mongodb.database=${MONGO_DB}
+spring.server.error.include-message=always 
+spring.server.error.include-binding-errors=always 
+spring.server.error.include-stacktrace=on_trace_param 
+spring.server.error.include-exception=true 
