--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -49,8 +49,19 @@
 		<dependency> 
 			<groupId>org.springframework.boot</groupId> 
 			<artifactId>spring-boot-starter-validation</artifactId> 
-		</dependency>		
-	</dependencies>
+		</dependency>
+		<dependency>
+			<groupId>commons-validator</groupId>
+			<artifactId>commons-validator</artifactId>
+			<version>1.7</version>
+		  </dependency>		
+	
+   <dependency>
+     <groupId>org.apache.wicket</groupId>
+     <artifactId>wicket-core</artifactId>
+     <version>9.0.0-M2</version>
+   </dependency>
+ </dependencies>
 
 	<build>
 		<plugins>
