backend completed with google tranlate api integration for descriptions and dicebear api integration for placeholder images

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -3,7 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-
+onramp-takehome-46bcda60d473.json
 
 ### STS ###
 .apt_generated
