--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -59,12 +59,16 @@
 			<artifactId>commons-validator</artifactId>
 			<version>1.7</version>
 		  </dependency>		
-	
-   <dependency>
-     <groupId>org.apache.wicket</groupId>
-     <artifactId>wicket-core</artifactId>
-     <version>9.0.0-M2</version>
-   </dependency>
+		  <dependency>
+			<groupId>org.apache.wicket</groupId>
+			<artifactId>wicket-core</artifactId>
+			<version>9.0.0-M2</version>
+		  </dependency>
+		  <dependency>
+		   <groupId>com.google.cloud</groupId>
+		   <artifactId>google-cloud-translate</artifactId>
+		   <version>2.1.10</version>
+		 </dependency>
  </dependencies>
 
 	<build>
