--- a/frontend/bulletin-frontend/package.json
+++ b/frontend/bulletin-frontend/package.json
@@ -9,9 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.8.6",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "framer-motion": "^6",
+    "ky": "^0.30.0",
+    "nanoid": "^3.3.1",
     "next": "12.1.0",
+    "observable-hooks": "^4.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-select": "^5.2.2",
+    "rxjs": "^7.5.4",
+    "ts-results": "^3.3.0",
+    "zod": "^3.13.4"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
