--- a/frontend/bulletin-frontend/package.json
+++ b/frontend/bulletin-frontend/package.json
@@ -12,12 +12,15 @@
     "@chakra-ui/react": "^1.8.6",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@hookform/resolvers": "^2.8.8",
     "framer-motion": "^6",
+    "isomorphic-unfetch": "^3.1.0",
     "ky": "^0.30.0",
     "next": "12.1.0",
     "observable-hooks": "^4.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.27.1",
     "react-select": "^5.2.2",
     "rxjs": "^7.5.4",
     "ts-results": "^3.3.0",
