--- a/frontend/bulletin-frontend/package.json
+++ b/frontend/bulletin-frontend/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^6",
     "isomorphic-unfetch": "^3.1.0",
     "ky": "^0.30.0",
+    "nanoid": "^3.3.1",
     "next": "12.1.0",
     "observable-hooks": "^4.2.0",
     "react": "17.0.2",
