--- a/frontend/bulletin-frontend/package.json
+++ b/frontend/bulletin-frontend/package.json
@@ -25,6 +25,7 @@
     "react-h5-audio-player": "^3.8.3",
     "react-hook-form": "^7.27.1",
     "react-hooks-global-state": "^1.0.2",
+    "react-icons": "^4.3.1",
     "react-select": "^5.2.2",
     "rxjs": "^7.5.4",
     "swr": "^1.2.2",
